--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/postcss": "^4.0.12",
     "next": "^15.0.2",
     "nextra": "^3.2.0",
     "nextra-theme-docs": "^3.2.0",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5.6.3"
   },
   "scripts": {
