--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-gallery": "^1.4.0",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.6.3"
   },
